add jbang support